# SphericalParameterisation

./: README.md  SphericalParameterisation.cc
Example/: CMakeLists.txt  main.cc  test.mac
Example/include/: DetectorConstruction.hh  SphericalParameterisation.hh
Example/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SphericalParameterisation.cc
